[package]
name = "ws_bridge_rs"
version = "0.1.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
clap = "2.33.3"
tokio-tungstenite = "0.16.0"
tokio = { version = "1.14.0", features = ["rt", "net", "rt-multi-thread", "io-util", "sync", "macros"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4"
env_logger = "0.9.0"
